# hyrdoml

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirments.txt
docs/: catchment.md  configuration.md  convert_exampels.py  data_structure.md  installation.md  models.md
docs/examples/: 01_simulation.md  02_finetune_for_a_custom_catchment.md  03_build_a_path_mapping.md  03_run_evaluation.md  04_run_evaluation.md  04_visualization.md  05_how_to_make_a_new_dataset.md  05_visualization.md
examples/development_notebooks/: 01_config.ipynb  02_model.ipynb  03_dataset.ipynb  03_dataset_transform.ipynb  04_dataloader.ipynb  04_visualize_evaluation.ipynb  05_load_camels_aus.ipynb  06_prediction.ipynb  07_evaluation.ipynb  08_train.ipynb  09_finetuning.ipynb  10_prediction.ipynb  11_prediction2.ipynb  12_validation.ipynb  13_finetuning2.ipynb  14_finetuning2.ipynb  15_add_awra_to_dataset.ipynb  15_use_evaluation_routines.ipynb  16_visualzation.ipynb  17_prepare_data_for_Examples.ipynb  18_validation_troubleshoot.ipynb  lib.py
examples/notebooks/: 01_simulation.ipynb  02_finetune_for_a_custom_catchment.ipynb  03_build_a_path_mapping.ipynb  04_run_evaluation.ipynb  05_visualization.ipynb
examples/sample_data/: 401208.csv  401208_attributes.json  4fold.json  basins.txt
hydroml/: __init__.py
hydroml/config/: config.py
hydroml/data/: __init__.py  camels_aus_ds.py  catchment.py  dataset.py  evolving_static_features.py  periods.py  transformers.py
tests/: conftest.py  test_config_file_handelr.py  test_dataloader.py  test_dataset.py  test_lstm.py
(+56 files in other folders)
